--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 <body>
   <div class="header">
   <div class="container">
-    <div class="header-content__block">
-      <div class="header-content__block_all">
-        <div class="header-content__block_title-group">
-          <div class="header-content__block_title">
+    <div class="header-content">
+      <div class="header-content__all">
+        <div class="header-content__title-group">
+          <div class="header-content__title">
             PICTURES
           </div>
-          <div class="header-content__block_subtitle">
+          <div class="header-content__subtitle">
             SUBTITLES
           </div>
         </div>
-        <div class="header-content__block_nav">
+        <div class="header-content__nav">
           <div class="nav__index">
             <a class="header__nav" href="#info">OUR STORY</a>
             <a class="header__nav" href="blog.html">SERVICES</a>
@@ -26,14 +26,13 @@
             <a class="header__nav" href="#contacts">CONTACT</a>
           </div>
         </div>
-        <div class="header-content__block_contacts">
-          <div class="header-content__block_tel">
-            (303) 457-2040
-          </div>
+        <div class="header-content__contacts">
+              <a href="#"class="header-content__tel">
+                  (303) 457-2040
+              </a>
         </div>
-
-        <div class="header-content__block_button">
-          <div class="header-content__block_button-main">
+        <div class="header-content__button">
+          <div class="header-content__button-main">
           <a href="#"class="button__schedule">
               Schedule Appointment
             </a>
@@ -226,10 +225,106 @@
                     custom made chiropractic treatment for all ages.
                 </div>
             </div>
+    <div class="advantages-card">
+        <div class="advantages-card_1">
+            <div class="advantages-card__practice">
+                    <div class="advantages-card__title">
+                        Multi Disciplinary Practice
+                    </div>
+                    <div class="advantages-card__description">
+                        We offer chiropractic, massage and acupuncture.
+                    </div>
+            </div>
+            <div class="advantages-card__experience">
+                    <div class="advantages-card__title">
+                        Over 10 Years of Experience
+                    </div>
+                    <div class="advantages-card__description">
+                        The Doctor has 10+ years of experience in the chiropractic.
+                    </div>
+            </div>
         </div>
-        <div class="introduction__img">
-            <img class="introduction__img-spine"src="/img/spine.png">
+        <div class="advantages-card_2">
+                <div class="advantages-card__language">
+                        <div class="advantages-card__title">
+                            The Doctor Speaks Spanish
+                        </div>
+                        <div class="advantages-card__description">
+                            We strive to provide complete care for our patients. We speak English and Spanish.
+                        </div>
+                </div>
+                <div class="advantages-card__insurance">
+                        <div class="advantages-card__title">
+                            Insurance
+                        </div>
+                        <div class="advantages-card__description">
+                            We accept most insurance and file the claims for you.
+                        </div>
+                </div>
+            </div>
+    </div>
+</div>
+</div>
+  <div class="container">
+    <div class="doctor">
+        <div class="doctor__block">
+            <div class="doctor__img">
+                <img class="about__img-doctor"src="/img/doctor.png">
+            </div>
         </div>
+            <div class="doctor__article">
+                <div class="doctor__border">
+                </div>
+                    <div class="doctor__title">
+                        <div class="doctor__title-text">
+                            Dr. Osvaldo «Ozzie» Gratacos
+                        </div>
+                    </div>
+                    <div class="doctor__description">
+                        <div class="doctor__description-text">
+                            Dr. Osvaldo “Ozzie” Gratacos is a licensed chiropractor serving the Thornton 
+                            and surrounding communities. Dr. Gratacos graduated from Palmer College of 
+                            Chiropractic in Florida. After graduating, Dr. Gratacos went back to his home 
+                            in Puerto Rico to open a practice for 4 years before practicing in Lakewood, 
+                            Colorado. He is bilingual (spanish/english). Ozzie is certified in extremity 
+                            adjustments, treatment in golf related injuries, and Cox technique for 
+                            herniated disc. 
+                        </div>
+                    </div>
+            </div>
+    </div>
+</div>
+  <div class="container">
+    <div class="contactme">
+        <div class="contactme__all">
+        <div class="contactme__title-text">
+            Contact Us Today
+        </div>
+        <div class="contactme__description">
+            We are happy to assist you with any questions you may have regarding your 
+            chiropractic needs or insurance questions. You can make an appointment online or 
+            by giving us a call at
+        </div>
+        <div class="contactme__contacts">
+            <a href="#"class="contactme__tel">
+                (303) 457-2040
+            </a>
+        </div>
+            <a href="#"class="contactme__button">
+                Make an Appointment
+            </a>
+        </div>
+    </div>
+    <div class="contactme__img">
+        <img class="contactme__img-map"src="/img/map.png">
+    </div>
+    <div class="header-content__nav">
+            <div class="nav__index">
+              <a class="header__nav" href="#info">OUR STORY</a>
+              <a class="header__nav" href="blog.html">SERVICES</a>
+              <a class="header__nav" href="#contacts">FAQ</a>
+              <a class="header__nav" href="#contacts">CONTACT</a>
+            </div>
     </div>
 </div>
 </body>
