--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 </div>
                 <div class="about__description">
                     <div class="about__description-text">
-                            Healthy Spine Family Chiropractic was created for the necessity of custom 
-                            made chiropractic treatment for all ages. We understand that not all 
-                            bodies are the same and so your chiropractic treatment will be tailored 
-                            to you. Healthy Spine Family Chiropractic was created for the necessity 
-                            of custom made chiropractic treatment for all ages. We understand that 
-                            not all bodies are the same and so your chiropractic treatment will be 
-                            tailored to you. Healthy Spine Family Chiropractic was created for the 
-                            necessity of custom made chiropractic treatment for all ages. We 
-                            understand that not all bodies are the same and so your chiropractic 
-                            treatment will be tailored to you.
+                        Healthy Spine Family Chiropractic was created for the necessity of custom 
+                        made chiropractic treatment for all ages. We understand that not all 
+                        bodies are the same and so your chiropractic treatment will be tailored 
+                        to you. Healthy Spine Family Chiropractic was created for the necessity 
+                        of custom made chiropractic treatment for all ages. We understand that 
+                        not all bodies are the same and so your chiropractic treatment will be 
+                        tailored to you. Healthy Spine Family Chiropractic was created for the 
+                        necessity of custom made chiropractic treatment for all ages. We 
+                        understand that not all bodies are the same and so your chiropractic 
+                        treatment will be tailored to you.
                     </div>
                 </div>
                     <a href="#"class="about__button">
@@ -108,35 +108,35 @@
         <div class="services__title-text">
             Services
         </div>
-<div class="sercices__card">
-    <div class="sercices__card-chiropractic-massage">
-        <div class="sercices__card-chiropractic">
-            <div class="sercices__card__img">
-                <img class="sercices__card__img"src="/img/chiropractic.png">
+<div class="services__card">
+    <div class="services__card-chiropractic-massage">
+        <div class="services__card-chiropractic">
+            <div class="services__card__img">
+                <img class="services__card__img"src="/img/chiropractic.png">
             </div>
-    <div class="sercices__card-article">
-        <div class="sercices__card-text">
-            <div class="sercices__card-title">
+    <div class="services__card-article">
+        <div class="services__card-text">
+            <div class="services__card-title">
                 Chiropractic
             </div>
-            <div class="sercices__card-description">
+            <div class="services__card-description">
                 Chiropractic care is a unique science that focuses on restoring and maintaining health, 
                 while most other healing arts are designed to treat disease.
             </div>  
-        <div class="sercices__card-chiropractic_links">
-            <div class="sercices__card-chiropractic_links-1">
-                <div class="sercices__card-chiropractic_link">
+        <div class="services__card-chiropractic_links">
+            <div class="services__card-chiropractic_links-1">
+                <div class="services__card-chiropractic_link">
                     Chiropractic Adjustment
                 </div>
-                <div class="sercices__card-chiropractic_link">
+                <div class="services__card-chiropractic_link">
                     Flexion-distraction
                 </div>
             </div>
-            <div class="sercices__card-chiropractic_links-2">
-                <div class="sercices__card-chiropractic_link">
+            <div class="services__card-chiropractic_links-2">
+                <div class="services__card-chiropractic_link">
                     Thompson
                 </div>
-                <div class="sercices__card-chiropractic_link">
+                <div class="services__card-chiropractic_link">
                     View All Services
                 </div>
             </div>
@@ -144,33 +144,33 @@
         </div>
     </div>
         </div>
-        <div class="sercices__card-massage">
-            <div class="sercices__card__img">
-                <img class="sercices__card__img"src="/img/massage.png">
+        <div class="services__card-massage">
+            <div class="services__card__img">
+                <img class="services__card__img"src="/img/massage.png">
             </div>
-        <div class="sercices__card-article">
-            <div class="sercices__card-text">
-                <div class="sercices__card-title">
+        <div class="services__card-article">
+            <div class="services__card-text">
+                <div class="services__card-title">
                     Massage
                 </div>
-                <div class="sercices__card-description">
+                <div class="services__card-description">
                     Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
                     and it provides a natural, conservative approach to your health care.
                 </div>  
-            <div class="sercices__card-chiropractic_links">
-                <div class="sercices__card-chiropractic_links-1">
-                    <div class="sercices__card-chiropractic_link">
+            <div class="services__card-chiropractic_links">
+                <div class="services__card-chiropractic_links-1">
+                    <div class="services__card-chiropractic_link">
                         Deep Tissue
                     </div>
-                    <div class="sercices__card-chiropractic_link">
+                    <div class="services__card-chiropractic_link">
                         Trigger Point 
                     </div>
                 </div>
-                <div class="sercices__card-chiropractic_links-2">
-                    <div class="sercices__card-chiropractic_link">
+                <div class="services__card-chiropractic_links-2">
+                    <div class="services__card-chiropractic_link">
                         Sport Massage 
                     </div>
-                    <div class="sercices__card-chiropractic_link">
+                    <div class="services__card-chiropractic_link">
                         Myofascial Release
                     </div>
                 </div>
@@ -180,25 +180,25 @@
         </div>
     </div>
 <div class="card-acupuncture_block">
-    <div class="sercices__card-acupuncture">
-        <div class="sercices__card__img">
-            <img class="sercices__card__img"src="/img/acupuncture.png">
+    <div class="services__card-acupuncture">
+        <div class="services__card__img">
+            <img class="services__card__img"src="/img/acupuncture.png">
         </div>
-    <div class="sercices__card-article">
-        <div class="sercices__card-text">
-            <div class="sercices__card-title">
+    <div class="services__card-article">
+        <div class="services__card-text">
+            <div class="services__card-title">
                 Acupuncture
             </div>
-            <div class="sercices__card-description">
+            <div class="services__card-description">
                 Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
                 and it provides a natural, conservative approach to your health care.
             </div>  
-        <div class="sercices__card-chiropractic_links">
-            <div class="sercices__card-chiropractic_links-1">
-                <div class="sercices__card-chiropractic_link">
+        <div class="services__card-chiropractic_links">
+            <div class="services__card-chiropractic_links-1">
+                <div class="services__card-chiropractic_link">
                     Cupping
                 </div>
-                <div class="sercices__card-chiropractic_link">
+                <div class="services__card-chiropractic_link">
                     Chinese Herbs
                 </div>
             </div>
@@ -211,7 +211,6 @@
 </div>
     </div>
 </div>
-  
   <div class="container">
     <div class="advantages">
         <div class="advantages__border">
@@ -225,39 +224,39 @@
                     custom made chiropractic treatment for all ages.
                 </div>
             </div>
-    <div class="advantages-card">
-        <div class="advantages-card_1">
-            <div class="advantages-card__practice">
-                    <div class="advantages-card__title">
+    <div class="advantages__card">
+        <div class="advantages__card_1">
+            <div class="advantages__card-practice">
+                    <div class="advantages__card-title">
                         Multi Disciplinary Practice
                     </div>
-                    <div class="advantages-card__description">
+                    <div class="advantages__card-description">
                         We offer chiropractic, massage and acupuncture.
                     </div>
             </div>
-            <div class="advantages-card__experience">
-                    <div class="advantages-card__title">
+            <div class="advantages__card-experience">
+                    <div class="advantages__card-title">
                         Over 10 Years of Experience
                     </div>
-                    <div class="advantages-card__description">
+                    <div class="advantages__card-description">
                         The Doctor has 10+ years of experience in the chiropractic.
                     </div>
             </div>
         </div>
-        <div class="advantages-card_2">
-                <div class="advantages-card__language">
-                        <div class="advantages-card__title">
+        <div class="advantages__card-2">
+                <div class="advantages__card-language">
+                        <div class="advantages__card-title">
                             The Doctor Speaks Spanish
                         </div>
-                        <div class="advantages-card__description">
+                        <div class="advantages__card-description">
                             We strive to provide complete care for our patients. We speak English and Spanish.
                         </div>
                 </div>
-                <div class="advantages-card__insurance">
-                        <div class="advantages-card__title">
+                <div class="advantages__card-insurance">
+                        <div class="advantages__card-title">
                             Insurance
                         </div>
-                        <div class="advantages-card__description">
+                        <div class="advantages__card-description">
                             We accept most insurance and file the claims for you.
                         </div>
                 </div>
@@ -269,7 +268,7 @@
     <div class="doctor">
         <div class="doctor__block">
             <div class="doctor__img">
-                <img class="about__img-doctor"src="/img/doctor.png">
+                <img class="doctor__img-doctor"src="/img/doctor.png">
             </div>
         </div>
             <div class="doctor__article">
@@ -318,13 +317,71 @@
     <div class="contactme__img">
         <img class="contactme__img-map"src="/img/map.png">
     </div>
-    <div class="header-content__nav">
+</div>
+
+    
+
+
+  <div class="container">
+    <div class="footer">
+        <div class="footer__main">
+        <div class="footer__content-nav">
             <div class="nav__index">
-              <a class="header__nav" href="#info">OUR STORY</a>
-              <a class="header__nav" href="blog.html">SERVICES</a>
-              <a class="header__nav" href="#contacts">FAQ</a>
-              <a class="header__nav" href="#contacts">CONTACT</a>
+                <a class="header__nav" href="#info">OUR STORY</a>
+                <a class="header__nav" href="blog.html">SERVICES</a>
+                <a class="header__nav" href="#contacts">FAQ</a>
+                <a class="header__nav" href="#contacts">CONTACT</a>
             </div>
+        </div>
+<div class="footer__contacts-social">
+        <div class="footer__social">
+            <div class="footer__social-icons">
+            HHHHHHHHHHHHHHH
+            </div>
+        </div>
+        <div class="footer-content__button">
+            <div class="contact-content__button-main">
+                <a href="#"class="footer__button">
+                    Contact us
+                </a>
+            </div>
+        </div>
+</div>
+        </div>
+
+        <div class="footer__main2"> 
+            <div class="footer__adress-tel">
+                <a href="#"class="footer__tel">
+                    (303) 457-2040
+                </a>
+                <div class="footer__adress">
+                    10313 Washington St., Thornton, CO 80229
+                </div>
+            </div>
+            <div class="footer__schedule">
+                <div class="footer__schedule-day">
+                    Monday, Wednesday, Thursday — 9:00 AM - 6:00 PM
+                </div>
+                <div class="footer__schedule-day">
+                    Friday — 9:00 AM - 1:00 PM
+                </div>
+                <div class="footer__schedule-day">
+                    Saturday — 10:00 AM - 1:00 PM
+                </div>
+            </div>
+            <div class="footer__copyright">
+                <div class="footer__copyright-all">
+                    Company rating:
+                </div>
+                <div class="footer__copyright-all">
+                    © Copyright — Healthy Spine Family Chiropractic 2019
+                </div>
+                <div class="footer__copyright-all">
+                    Web Design — Direct Line Development
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 </body>
