--- a/index.html
+++ b/index.html
@@ -3,397 +3,52 @@
   <meta charset="UTF-8">
   <link href="main.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-reboot.min.css">
-  <title>ExamSite</title>
+  <title>Site</title>
 </head>
 <body>
   <div class="header">
-  <div class="container">
-    <div class="header-content">
-      <div class="header-content__all">
-        <div class="header-content__title-group">
-          <div class="header-content__title">
-            PICTURES
-          </div>
-          <div class="header-content__subtitle">
-            SUBTITLES
-          </div>
-        </div>
-        <div class="header-content__nav">
-          <div class="nav__index">
-            <a class="header__nav" href="#info">OUR STORY</a>
-            <a class="header__nav" href="blog.html">SERVICES</a>
-            <a class="header__nav" href="#contacts">FAQ</a>
-            <a class="header__nav" href="#contacts">CONTACT</a>
-          </div>
-        </div>
-        <div class="header-content__contacts">
-              <a href="#"class="header-content__tel">
-                  (303) 457-2040
-              </a>
-        </div>
-        <div class="header-content__button">
-          <div class="header-content__button-main">
-          <a href="#"class="button__schedule">
-              Schedule Appointment
-            </a>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>  
+  <div class="container"> 
+  <div class="header__label"><img src="../img/Logo.png"></div>
+  <div class="header__map header__common"><a class="header__map header__common" href="" class="header__map header__common">Главная</a>
+  <a class="header__common" href="#info">История обо мне</a>
+  <a class="header__common" href="blog.html">Мой блог</a>
+  <a class="header__common" href="#contacts">Контакты</a>
+  <!-- <a class="header__common" href="#">Моя вторая страница</a> -->
 </div>
-  <div class="container">
-    <div class="introduction">
-        <div class="introduction__article">
-            <div class="introduction__border">
-            </div>
-                <div class="introduction__title">
-                    Healthy Spine Family Chiropractic
-                </div>
-                <div class="introduction__description">
-                    <div class="introduction__description-text">
-                    Healthy Spine Family Chiropractic was created for the necessity of custom made chiropractic 
-                    treatment for all ages. We understand that not all bodies are the same.
-                    </div>
-                </div>
-                    <a href="#"class="introduction__button">
-                        Get In Touch Now
-                    </a>
-                <div class="introduction__button_social-networks">
-                    HHHHHHHHHHHHHHH
-                </div>
-        </div>
-        <div class="introduction__img">
-            <img class="introduction__img-spine"src="/img/spine.png">
-        </div>
-    </div>
 </div>
-  <div class="container">
-    <div class="about">
-        <div class="about__img">
-            <img class="about__img-neck"src="/img/neck.png">
-        </div>
-        <div class="about__article">
-            <div class="about__border">
-            </div>
-                <div class="about__title">
-                    <div class="about__title-text">
-                    Comprehensive Pain Treatment
-                    </div>
-                </div>
-                <div class="about__description">
-                    <div class="about__description-text">
-                        Healthy Spine Family Chiropractic was created for the necessity of custom 
-                        made chiropractic treatment for all ages. We understand that not all 
-                        bodies are the same and so your chiropractic treatment will be tailored 
-                        to you. Healthy Spine Family Chiropractic was created for the necessity 
-                        of custom made chiropractic treatment for all ages. We understand that 
-                        not all bodies are the same and so your chiropractic treatment will be 
-                        tailored to you. Healthy Spine Family Chiropractic was created for the 
-                        necessity of custom made chiropractic treatment for all ages. We 
-                        understand that not all bodies are the same and so your chiropractic 
-                        treatment will be tailored to you.
-                    </div>
-                </div>
-                    <a href="#"class="about__button">
-                        Learn more
-                    </a>
-        </div>
-    </div>
 </div>
-  <div class="container">
-    <div class="services">
-        <div class="services__border">
-        </div>
-        <div class="services__title-text">
-            Services
-        </div>
-<div class="services__card">
-    <div class="services__card-chiropractic-massage">
-        <div class="services__card-chiropractic">
-            <div class="services__card__img">
-                <img class="services__card__img"src="/img/chiropractic.png">
-            </div>
-    <div class="services__card-article">
-        <div class="services__card-text">
-            <div class="services__card-title">
-                Chiropractic
-            </div>
-            <div class="services__card-description">
-                Chiropractic care is a unique science that focuses on restoring and maintaining health, 
-                while most other healing arts are designed to treat disease.
-            </div>  
-        <div class="services__card-chiropractic_links">
-            <div class="services__card-chiropractic_links-1">
-                <div class="services__card-chiropractic_link">
-                    Chiropractic Adjustment
-                </div>
-                <div class="services__card-chiropractic_link">
-                    Flexion-distraction
-                </div>
-            </div>
-            <div class="services__card-chiropractic_links-2">
-                <div class="services__card-chiropractic_link">
-                    Thompson
-                </div>
-                <div class="services__card-chiropractic_link">
-                    View All Services
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
-        </div>
-        <div class="services__card-massage">
-            <div class="services__card__img">
-                <img class="services__card__img"src="/img/massage.png">
-            </div>
-        <div class="services__card-article">
-            <div class="services__card-text">
-                <div class="services__card-title">
-                    Massage
-                </div>
-                <div class="services__card-description">
-                    Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
-                    and it provides a natural, conservative approach to your health care.
-                </div>  
-            <div class="services__card-chiropractic_links">
-                <div class="services__card-chiropractic_links-1">
-                    <div class="services__card-chiropractic_link">
-                        Deep Tissue
-                    </div>
-                    <div class="services__card-chiropractic_link">
-                        Trigger Point 
-                    </div>
-                </div>
-                <div class="services__card-chiropractic_links-2">
-                    <div class="services__card-chiropractic_link">
-                        Sport Massage 
-                    </div>
-                    <div class="services__card-chiropractic_link">
-                        Myofascial Release
-                    </div>
-                </div>
-            </div>
-            </div>
-        </div>
-        </div>
-    </div>
-<div class="card-acupuncture_block">
-    <div class="services__card-acupuncture">
-        <div class="services__card__img">
-            <img class="services__card__img"src="/img/acupuncture.png">
-        </div>
-    <div class="services__card-article">
-        <div class="services__card-text">
-            <div class="services__card-title">
-                Acupuncture
-            </div>
-            <div class="services__card-description">
-                Healthy Spine Family Chiropractic, serves the Thornton and surrounding communities 
-                and it provides a natural, conservative approach to your health care.
-            </div>  
-        <div class="services__card-chiropractic_links">
-            <div class="services__card-chiropractic_links-1">
-                <div class="services__card-chiropractic_link">
-                    Cupping
-                </div>
-                <div class="services__card-chiropractic_link">
-                    Chinese Herbs
-                </div>
-            </div>
-        </div>
-        </div>
-    </div>
+  <a name="info"></a>
+<div class="infobox">
+    <div class="container">
+        <h2 class="infobox__title">КРАТКАЯ ИНФОРМАЦИЯ ОБО МНЕ</h2>
+        <p class="infobox__description">
+            Привет всем, меня зовут Катя, мне 24 года, у меня много хобби, и одно из них - готовить сладости.
+        </p>
     </div>
 </div>
 
-</div>
-    </div>
-</div>
-  <div class="container">
-    <div class="advantages">
-        <div class="advantages__border">
+  <a name="contacts"></a>
+<div class="contacts">
+    <div class="container">
+        <h2 class="contacts__title">КОНТАКТЫ</h2>
+        <div class="contacts__link">
+            <a href="https://vk.com">Ссылка на VK</a>
         </div>
-        <div class="advantages__title">
-            Advantages
+        <div class="contacts__link">
+            <a href="https://www.instagram.com">Ссылка на Instagram</a>
         </div>
-            <div class="advantages__description">
-                <div class="advantages__description-text">
-                    Healthy Spine Family Chiropractic was created for the necessity of 
-                    custom made chiropractic treatment for all ages.
-                </div>
-            </div>
-    <div class="advantages__card">
-        <div class="advantages__card-1">
-            <div class="advantages__card-practice">
-                <div class="advantages__card-content">
-                    <div class="advantages__card-title">
-                        Multi Disciplinary Practice
-                    </div>
-                    <div class="advantages__card-description">
-                        We offer chiropractic, massage and acupuncture.
-                    </div>
-                </div>
-            </div>    
-            <div class="advantages__card-experience">
-                <div class="advantages__card-content">
-                    <div class="advantages__card-title">
-                        Over 10 Years of Experience
-                    </div>
-                    <div class="advantages__card-description">
-                        The Doctor has 10+ years of experience in the chiropractic.
-                    </div>
-                </div>
-            </div>   
+        <div class="contacts__link">
+            <a href="tel:+4374587475489">Номер сотового</a>
         </div>
-        <div class="advantages__card-2">
-            <div class="advantages__card-language">
-                <div class="advantages__card-content">
-                    <div class="advantages__card-title">
-                        The Doctor Speaks Spanish
-                    </div>
-                    <div class="advantages__card-description">
-                        We strive to provide complete care for our patients. We speak English and Spanish.
-                    </div>
-                </div>
-            </div>
-            <div class="advantages__card-insurance">
-                <div class="advantages__card-content">
-                    <div class="advantages__card-title">
-                        Insurance
-                    </div>
-                    <div class="advantages__card-description">
-                        We accept most insurance and file the claims for you.
-                    </div>   
-                </div>
-            </div>
-        </div>
-    </div>
-    </div>
-</div>
-  <div class="container">
-    <div class="doctor">
-        <div class="doctor__block">
-            <div class="doctor__img-background">
-                <div class="doctor__img">
-                        <img class="doctor__img-doctor"src="/img/doctor.png">
-                </div>
-            </div>
-        </div>
-            <div class="doctor__article">
-                <div class="doctor__border">
-                </div>
-                    <div class="doctor__title">
-                        <div class="doctor__title-text">
-                            Dr. Osvaldo «Ozzie» Gratacos
-                        </div>
-                    </div>
-                    <div class="doctor__description">
-                        <div class="doctor__description-text">
-                            Dr. Osvaldo “Ozzie” Gratacos is a licensed chiropractor serving the Thornton 
-                            and surrounding communities. Dr. Gratacos graduated from Palmer College of 
-                            Chiropractic in Florida. After graduating, Dr. Gratacos went back to his home 
-                            in Puerto Rico to open a practice for 4 years before practicing in Lakewood, 
-                            Colorado. He is bilingual (spanish/english). Ozzie is certified in extremity 
-                            adjustments, treatment in golf related injuries, and Cox technique for 
-                            herniated disc. 
-                        </div>
-                    </div>
-            </div>
-    </div>
-</div>
-  <div class="container">
-    <div class="contactme">
-        <div class="contactme__all">
-        <div class="contactme__title-text">
-            Contact Us Today
-        </div>
-        <div class="contactme__description">
-            We are happy to assist you with any questions you may have regarding your 
-            chiropractic needs or insurance questions. You can make an appointment online or 
-            by giving us a call at
-        </div>
-        <div class="contactme__contacts">
-            <a href="#"class="contactme__tel">
-                (303) 457-2040
-            </a>
-        </div>
-            <a href="#"class="contactme__button">
-                Make an Appointment
-            </a>
-        </div>
-    </div>
-    <div class="contactme__img">
-        <img class="contactme__img-map"src="/img/map.png">
     </div>
 </div>
 
-    
-
-
-  <div class="container">
-    <div class="footer">
-        <div class="footer__main">
-        <div class="footer__content-nav">
-            <div class="nav__index">
-                <a class="header__nav" href="#info">OUR STORY</a>
-                <a class="header__nav" href="blog.html">SERVICES</a>
-                <a class="header__nav" href="#contacts">FAQ</a>
-                <a class="header__nav" href="#contacts">CONTACT</a>
-            </div>
-        </div>
-<div class="footer__contacts-social">
-        <div class="footer__social">
-            <div class="footer__social-icons">
-            HHHHHHHHHHHHHHH
-            </div>
-        </div>
-        <div class="footer-content__button">
-            <div class="contact-content__button-main">
-                <a href="#"class="footer__button">
-                    Contact us
-                </a>
-            </div>
-        </div>
-</div>
-        </div>
-
-        <div class="footer__main2"> 
-            <div class="footer__adress-tel">
-                <a href="#"class="footer__tel">
-                    (303) 457-2040
-                </a>
-                <div class="footer__adress">
-                    10313 Washington St., Thornton, CO 80229
-                </div>
-            </div>
-            <div class="footer__schedule">
-                <div class="footer__schedule-day">
-                    Monday, Wednesday, Thursday — 9:00 AM - 6:00 PM
-                </div>
-                <div class="footer__schedule-day">
-                    Friday — 9:00 AM - 1:00 PM
-                </div>
-                <div class="footer__schedule-day">
-                    Saturday — 10:00 AM - 1:00 PM
-                </div>
-            </div>
-            <div class="footer__copyright">
-                <div class="footer__copyright-all">
-                    Company rating:
-                </div>
-                <div class="footer__copyright-all">
-                    © Copyright — Healthy Spine Family Chiropractic 2019
-                </div>
-                <div class="footer__copyright-all">
-                    Web Design — Direct Line Development
-                </div>
-            </div>
-        </div>
-
+  <div class="footer">
+    <div class="container">
+        <div class="footer__site "><p>© 2019, my-site.ru</p></div>
     </div>
 </div>
+
 </body>
 <script src="script.js"></script>
 </html>
